--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "declaration": true,
       /* Visit https://aka.ms/tsconfig to read more about this file */
   
       /* Projects */
