--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "base-class-ts",
   "version": "1.0.2",
-  "description": "Base class for client side typescript",
-  "main": "BaseClass.ts",
+  "description": "Base class for client side typescript javascript projects",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
