--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,8 +10,29 @@
 			],
 			"group": {
 				"kind": "build",
-				"isDefault": true
+				"isDefault": false
 			}
-		}
+		},
+		{
+            "label": "tsc watch",
+            "type": "shell",
+            "command": "./node_modules/.bin/tsc",
+            "isBackground": true,
+            "args": ["--watch", "--noEmit", "--project", "/"],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "never",
+                "echo": false,
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": "$tsc-watch",
+            "runOptions": {
+                "runOn": "folderOpen"
+            }
+        }
 	]
 }
